--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -6,16 +6,55 @@
         android:layout_height="match_parent"
         tools:context=".product_details.ProductDetailsActivity">
 
+
+    <ImageView
+            android:id="@+id/picture"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_centerVertical="true"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/product_picture"/>
+
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/price"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:gravity="end"
+            android:textColor="@color/colorAccent"
+            app:layout_constraintTop_toBottomOf="@+id/picture"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"/>
+
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/name"
+              android:textSize="20dp"
+              android:textStyle="bold"
+              android:gravity="center"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="16dp"
-              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/price"
               android:layout_marginTop="32dp"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="16dp"
-              app:layout_constraintBottom_toBottomOf="parent"
               android:layout_marginBottom="70dp"/>
+
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/description"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
