--- a/clangnotifications/src/main/res/layout/activity_clang.xml
+++ b/clangnotifications/src/main/res/layout/activity_clang.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.ClangActivity">
+        tools:context=".ui.ClangActivity"
+        android:background="#c9cfbc">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
