--- a/clangnotifications/src/main/res/layout/activity_clang.xml
+++ b/clangnotifications/src/main/res/layout/activity_clang.xml
@@ -8,4 +8,15 @@
         tools:context=".ui.ClangActivity"
         android:background="#c9cfbc">
 
+    <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
+                                                 android:layout_height="wrap_content"
+                                                 app:layout_constraintStart_toStartOf="parent"
+                                                 app:layout_constraintTop_toTopOf="parent"
+                                                 android:layout_marginEnd="32dp"
+                                                 app:layout_constraintEnd_toEndOf="parent"
+                                                 app:layout_constraintBottom_toBottomOf="parent"
+                                                 android:text="Some data blah blah"
+                                                 android:gravity="center"
+                                                 android:layout_marginStart="32dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
