--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,23 +10,31 @@
 
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="19dp"
+            android:layout_height="30dp"
             android:text="@string/main_text"
+            android:textSize="20sp"
             android:id="@+id/mainText"/>
 
     <Button
             android:id="@+id/register"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/register"
             tools:layout_editor_absoluteY="390dp"
             tools:layout_editor_absoluteX="161dp"/>
 
     <Button
-            android:id="@+id/products"
-            android:layout_width="wrap_content"
+            android:id="@+id/login"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="@string/go_to_product_overview"
+            android:text="@string/login"
+            tools:layout_editor_absoluteY="390dp"
+            tools:layout_editor_absoluteX="161dp"/>
+    <Button
+            android:id="@+id/poll"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="@string/poll"
             tools:layout_editor_absoluteY="390dp"
             tools:layout_editor_absoluteX="161dp"/>
 
