--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -7,21 +7,23 @@
         tools:context=".poll.PollActivity">
 
     <TextView
+            android:id="@+id/question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/question"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="25dp"
             android:textAlignment="center"
-            android:gravity="center_horizontal" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
+            android:gravity="center_horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="0dp"
-            android:scrollbars="vertical"
             android:layout_height="0dp"
+            android:scrollbars="vertical"
             app:layout_constraintTop_toBottomOf="@+id/question"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
