--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -9,7 +9,6 @@
             android:layout_height="wrap_content"
             tools:context=".product_details.ProductDetailsActivity">
 
-
         <ImageView
                 android:id="@+id/picture"
                 android:layout_width="match_parent"
@@ -36,19 +35,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="24dp"/>
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/name"
-                  android:textSize="20dp"
-                  android:textStyle="bold"
-                  android:gravity="center"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="16dp"
-                  app:layout_constraintTop_toBottomOf="@+id/price"
-                  android:layout_marginTop="32dp"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  android:layout_marginEnd="16dp"
-                  android:layout_marginBottom="70dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/name"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/price"
+                android:layout_marginTop="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="70dp"/>
 
         <TextView
                 android:layout_width="0dp"
