--- a/app/src/main/res/layout/answer_row.xml
+++ b/app/src/main/res/layout/answer_row.xml
@@ -4,6 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
+    <RadioButton
+            android:id="@+id/list_view_item_radio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"/>
+
     <TextView
             android:id="@+id/question_text"
             android:layout_width="0dp"
