--- a/app/src/main/res/layout/fragment_poll.xml
+++ b/app/src/main/res/layout/fragment_poll.xml
@@ -3,28 +3,27 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".poll.PollActivity">
+        android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/question"
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textAlignment="center"
             android:gravity="center_horizontal"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/rv_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scrollbars="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintTop_toBottomOf="@+id/tv_question"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
