--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/mainFragment"
-            android:name="nl.worth.MainFragment"
+            android:name="nl.worth.ui.MainFragment"
             android:label="fragment_main"
             tools:layout="@layout/fragment_main" >
         <action
@@ -15,30 +15,24 @@
                 app:destination="@id/loginFragment"
                 app:enterAnim="@anim/nav_default_enter_anim"
                 app:exitAnim="@anim/nav_default_exit_anim"
-                app:launchSingleTop="false"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"
-                app:popUpTo="@id/mainFragment"
-                app:popUpToInclusive="true" />
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
                 android:id="@+id/action_mainFragment_to_pollFragment"
                 app:destination="@id/pollFragment"
                 app:enterAnim="@anim/nav_default_enter_anim"
                 app:exitAnim="@anim/nav_default_exit_anim"
-                app:launchSingleTop="false"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"
-                app:popUpTo="@id/mainFragment"
-                app:popUpToInclusive="true" />
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
             android:id="@+id/loginFragment"
-            android:name="nl.worth.LoginFragment"
+            android:name="nl.worth.ui.login.LoginFragment"
             android:label="fragment_login"
             tools:layout="@layout/fragment_login" />
     <fragment
             android:id="@+id/pollFragment"
-            android:name="nl.worth.poll.PollFragment"
+            android:name="nl.worth.ui.poll.PollFragment"
             android:label="fragment_poll"
             tools:layout="@layout/fragment_poll" />
 </navigation>
