--- a/app/src/main/res/layout/answer_row.xml
+++ b/app/src/main/res/layout/answer_row.xml
@@ -16,6 +16,6 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
 </LinearLayout>
