--- a/app/src/main/res/layout/fragment_poll.xml
+++ b/app/src/main/res/layout/fragment_poll.xml
@@ -9,24 +9,55 @@
             android:id="@+id/tv_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:textSize="25sp"
             android:textAlignment="center"
+            android:text="What is your favorite car color?"
             android:gravity="center_horizontal"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_recycler_view"
+    <RadioGroup
+            android:id="@+id/rg_poll"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scrollbars="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/tv_question"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/tv_question"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_submit"/>
+            app:layout_constraintBottom_toTopOf="@id/btn_submit">
+
+        <RadioButton
+                android:id="@+id/rb_item_1"
+                android:text="Red"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        <RadioButton
+                android:id="@+id/rb_item_2"
+                android:text="Grey"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        <RadioButton
+                android:id="@+id/rb_item_3"
+                android:text="Black"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        <RadioButton
+                android:id="@+id/rb_item_4"
+                android:text="Blue"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+    </RadioGroup>
+
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_submit"
